fixed overlapping after ordering

--- a/css/styles.css
+++ b/css/styles.css
@@ -355,6 +355,7 @@ h1 {
 }
 
 .hero {
+  z-index: 10;
   position: relative;
   min-height: 80vh;
   box-sizing: border-box;
